# geometry-processing-parameterization

./: .gitignore  CMakeLists.txt  main.cpp
include/: tutte.h
src/: lscm.cpp  tutte.cpp  vector_area_matrix.cpp
